Added the clear button in the HTML for clearing the whole canvas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <title>Web WhiteBoard</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
 </head>
+
 <body>
+    <button id="clear_complete">Clear</button>
     <div id="canvas_div">
-            <canvas id="white_board" width="700" height="700" style="border: 1px solid "></canvas>
+        <canvas id="white_board" width="700" height="700" style="border: 1px solid "></canvas>
     </div>
 </body>
 <script src="index.js"></script>
+
 </html>
