--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <button id="clear_complete">Clear</button>
+    <button onclick="saveImage()">save as image</button>
     <!-- <input id="size" placeholder="Enter the size" /> -->
     <div id="canvas_div">
         <canvas id="white_board"  style="border: 1px solid;background: black;"></canvas>
     </div>
+    <a id='test'></a>
 </body>
 <script src="index.js"></script>
 
