Added the functionality of creating new page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <button id="clear_complete">Clear</button>
+    <button onclick="newPage()">new page</button>
     <button onclick="saveImage()">save as image</button>
     <!-- <input id="size" placeholder="Enter the size" /> -->
     <div id="canvas_div">
