--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Web WhiteBoard</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+    <style>
+        html {
+          scroll-behavior: smooth;
+        }
+    </style>
 </head>
 
 <body>
