--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
         html {
           scroll-behavior: smooth;
         }
+        div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  font-size: 20px;
+}
     </style>
 </head>
 
 <body>
-    <button id="clear_complete">Clear</button>
-    <button onclick="newPage()">new page</button>
-    <button onclick="saveImage()">save as image</button>
+    <div class="sticky ">
+            <button id="clear_complete">Clear</button>
+            <button onclick="newPage()">new page</button>
+            <button onclick="saveImage()">save as image</button>
+    </div>
+    
     <!-- <input id="size" placeholder="Enter the size" /> -->
     <div id="canvas_div">
         <canvas id="white_board"  style="border: 1px solid;background: black;"></canvas>
