Added pixel for visiters count

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <canvas id="white_board"  style="border: 1px solid;background: black;"></canvas>
     </div>
     <a id='test'></a>
+    <img src="https://visitor-badge.laobi.icu/badge?page_id=ayush8010720467_web_whiteboard" height="1px" width="1px"/>
 </body>
 <script src="index.js"></script>
 
