--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="sticky ">
         <div class="left">
             <button id="clear_complete">Clear</button>
-            <button onclick="newPage()">new page</button>
-            <button onclick="saveImage()">save as image</button>
+            <button onclick="web_whiteboard.newPage()">new page</button>
+            <button onclick="web_whiteboard.saveImage()">save as image</button>
         </div>
         <div class="right">
             <span>Toggle Theme</span>
