Code updation for undo and some text changes

--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <button id="clear_complete">Clear</button>
             <button onclick="web_whiteboard.newPage()">new page</button>
             <button onclick="web_whiteboard.saveImage()">save as image</button>
+            <button onclick="web_whiteboard.undo()">undo</button>
         </div>
         <div class="right">
-            <span>Toggle Theme</span>
+            <span>Black Board</span>
             <label class="switch">
-            <input type="checkbox" id="toggleTheme">
+            <input type="checkbox" id="toggleTheme" checked>
             <span class="slider round"></span>
           </label>
         </div>
