--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   <body>
     <div class="sticky">
       <div class="left">
-        <button id="clear_complete">Clear</button>
+        <button onclick="web_whiteboard.clearAll()">Clear</button>
         <button onclick="web_whiteboard.newPage()">new page</button>
         <button onclick="web_whiteboard.saveImage()">save as image</button>
         <button onclick="web_whiteboard.undo()">undo</button>
+        <button onclick="web_whiteboard.saveWork()">Save Work State</button>
+        <button onclick="clearStorage()">Delete Saved State</button>
       </div>
       <div class="right">
         <span>Black Board</span>
@@ -32,7 +34,7 @@
         style="border: 1px solid; background: black"
       ></canvas>
     </div>
-    <a id="test"></a>
+    <a id="imageGetter"></a>
     <img
       src="https://visitor-badge.laobi.icu/badge?page_id=ayush8010720467_web_whiteboard"
       height="1px"
