new buttons added

--- a/index.html
+++ b/index.html
@@ -22,22 +22,30 @@
         <span class=" hover new">New Page</span>
         <span class=" hover save">Save as image</span>
         <span class=" hover undo">Undo</span>
+        <span class=" hover saveWork">Save work</span>
+        <span class=" hover deleteSaved">Delete saved work</span>
+
         <button class="btn clearBtn" id="clear_complete">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M12.48 3 7.73 7.75 3 12.59a2 2 0 0 0 0 2.82l4.3 4.3A1 1 0 0 0 8 20h12v-2h-7l7.22-7.22a2 2 0 0 0 0-2.83L15.31 3a2 2 0 0 0-2.83 0zM8.41 18l-4-4 4.75-4.84.74-.75 4.95 4.95-4.56 4.56-.07.08z"></path>
-          </svg>
+          <img src="/static/icons/broom.png" alt="">
         </button>
         <button class="btn newBtn" onclick="web_whiteboard.newPage()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M6 22h12a2 2 0 0 0 2-2V8l-6-6H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2zm7-18 5 5h-5V4zM8 14h3v-3h2v3h3v2h-3v3h-2v-3H8v-2z"></path></svg>
+          <img src="/static/icons/new-page.png" alt="">
         </button>
         <button class="btn saveBtn" onclick="web_whiteboard.saveImage()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M5 21h14a2 2 0 0 0 2-2V8l-5-5H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2zM7 5h4v2h2V5h2v4H7V5zm0 8h10v6H7v-6z"></path></svg>
+          <img src="/static/icons/download.png" alt="">
         </button>
         <button class="btn undoBtn" onclick="web_whiteboard.undo()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"></path></svg>
+          <img src="/static/icons/undo-circular-arrow.png" alt="">
+        </button>
+        <button class ="btn saveWorkBtn" onclick="web_whiteboard.saveWork()">
+          <img src="/static/icons/save.png" alt="">
+        </button>
+        <button class ="btn deleteSavedBtn" onclick="clearStorage()">
+          <img src="/static/icons/delete.png" alt="">
         </button>
       </div>
       <div class="right">
-        <span>Black Board</span>
+        <span class="black-board-text">Black Board</span>
         <label class="switch">
           <input type="checkbox" id="toggleTheme" checked />
           <span class="slider round"></span>
