folder structure change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Web WhiteBoard</title>
-    <link href="./index.css" rel="stylesheet" />
+    <link href="./src/index.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -64,6 +64,6 @@
         <a id="imageGetter"></a>
         <img src="https://visitor-badge.laobi.icu/badge?page_id=ayush8010720467_web_whiteboard" height="1px" width="1px" />
 </body>
-<script src="index.js"></script>
+<script src="./src/index.js"></script>
 
 </html>
