Fix for the cursor

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </li>
 
         <li>
-          <p onclick="web_whiteboard.saveImage()">
-            <svg onclick="web_whiteboard.undo()" xmlns="http://www.w3.org/2000/svg" width="26" height="26"
+          <p onclick="web_whiteboard.undo()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26"
               fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z" />
               <path
